--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
     margin:0; 
     padding: 0;
-    box-sizing: border-box;
 }
     
 html, body{
@@ -12,6 +11,7 @@ html, body{
     justify-content: center;
     align-items: center;
     background = #efefef;
+    overflow: hidden;
 }
 
 .wrapper {
@@ -19,10 +19,10 @@ html, body{
     //flex-direction: column;
     align-items: center;
     background-color: #fff;
-    width: 80%;
-    height: 56%;
-    border-radius: 1.5em;
-    border: 1em solid #fff;
+    width: 2000px;
+    height: 2000px;
+    //border-radius: 10px;
+    border: 10px solid #fff;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
     position:relative;
 }
@@ -46,6 +46,7 @@ p{
 }
 
 .wrapper .image-container .image-1{
+    position:absolute;
     width: 100%; 
     height: 100%;
     background-size: auto 100%;
@@ -62,7 +63,7 @@ p{
 
 .wrapper .slider{
     position:absolute;
-    top:0;
+    bottom:-40px;
     width: 100%;
     z-index: 99; 
 }
@@ -70,15 +71,31 @@ p{
 .wrapper .slider input{
     width: 100%;
     outline: none; 
-    -webkit-appearance:none;    
+   .. -webkit-appearance:none;    
     background: none;
 }
 
-.slider input::-webkit-slider-thumb{
-    height: 100vh;   
+/*.slider input::-webkit-slider-thumb{
+    height: 685px;   
     width: 3px; 
-    background: #fff;
+    background: red;
     -webkit-appearance:none; 
+}*/
+
+
+@media (max-width:2000px){
+    .wrapper{
+        width: 1500px;    
+    }
+    
 }
     
+
+@media (max-width:1500px){
+    .wrapper{
+        width: 1000px;    
+    }
+    
+}
+
        
